# CIM

./: .clang-format  .clang-tidy  .cmake-format  .gitignore  .pre-commit-config.yaml  CMakeLists.txt  README.md  autobuild.md  autobulid.sh  ccache_build.sh  ninja_build.sh  openapi.yaml  实施方案.md  开发计划书.md  接口清单.md
.github/workflows/: db-migration-check.yml
docs/: config.md  日志系统性能测试.md
docs/api/: config_module.md  iomaneger.md  log.md  log_module.md  net_module.md
docs/architecture/: module_design.md  system_arch.md
docs/guides/: quick_start.md
docs/optimization/: rotate.md
examples/: README.md  echo_server.cpp
examples/config/: test.yaml
include/: macro.hpp  noncopyable.hpp  singleton.hpp  timer.hpp  util.hpp
include/api/: README.md  article_api_module.hpp  auth_api_module.hpp  common_api_module.hpp  contact_api_module.hpp  emoticon_api_module.hpp  group_api_module.hpp  im_api_module.hpp  message_api_module.hpp  minimal_api_module.hpp  organize_api_module.hpp  talk_api_module.hpp  user_api_module.hpp  ws_gateway_module.hpp
include/app/: README.md  auth_service.hpp  common_service.hpp
include/base/: endian.hpp  macro.hpp  noncopyable.hpp  singleton.hpp
include/common/: common.hpp  config_loader.hpp
include/config/: config.hpp  config_var.hpp  config_var_base.hpp  config_variable_base.hpp  lexical_cast.hpp
include/core/: lock.hpp  macro.hpp  thread_pool.hpp  util.hpp
include/coroutine/: coroutine.hpp  scheduler.hpp
include/dao/: README.md  user_dao.hpp
include/db/: db.hpp  fox_thread.hpp  mysql.hpp  redis.hpp  sqlite3.hpp
include/ds/: array.hpp  bitmap.hpp  cache_status.hpp  dich.hpp  ds_util.hpp  hash_map.hpp  hash_multimap.hpp  lru_cache.hpp  roaring.h  roaring.hh  roaring_bitmap.hpp  timed_cache.hpp  timed_lru_cache.hpp
include/dto/: README.md
include/email/: email.hpp  smtp.cpp  smtp.hpp
include/hook/: fdmanager.hpp  hook.hpp
include/http/: http.hpp  http11_common.hpp  http11_parser.hpp  http_connection.hpp  http_parser.hpp  http_server.hpp  http_servlet.hpp  http_session.hpp  httpclient_parser.hpp  session_data.hpp  uri.hpp  ws_connection.hpp  ws_server.hpp  ws_servlet.hpp  ws_session.hpp
include/infra/: README.md
include/io/: coroutine.hpp  iomanager.hpp  lock.hpp  scheduler.hpp  semaphore.hpp  thread.hpp  thread_pool.hpp  timer.hpp
include/log/: log.hpp  log_appender.hpp  log_event.hpp  log_file.hpp  log_file_manager.hpp  log_formatter.hpp  log_level.hpp  logger.hpp  logger_manager.hpp
include/middleware/: README.md
include/net/: address.hpp  buffer.hpp  byte_array.hpp  fd_manager.hpp  hook.hpp  socket.hpp  socket_stream.hpp  stream.hpp  tcp_server.hpp
include/network/: address.hpp  endian.hpp  socket.hpp
include/ns/: name_server_module.hpp  ns_client.hpp  ns_protobuf.pb.cc  ns_protobuf.pb.h  ns_protobuf.proto  ns_protocol.hpp
include/orm/: column.hpp  index.cpp  index.hpp  orm_util.cpp  orm_util.hpp  table.hpp
include/other/: application.hpp  crypto_module.hpp  daemon.hpp  env.hpp  fd_manager.hpp  library.hpp  memory_pool.hpp  module.hpp  protocol.hpp  worker.hpp  zk_client.hpp
include/rock/: rock_protocol.hpp  rock_server.hpp  rock_stream.hpp
include/runtime/: coroutine.hpp  iomanager.hpp
include/stream/: socket_stream.hpp  stream.hpp  zlib_stream.hpp
include/streams/: async_socket_stream.hpp  load_balance.hpp  service_discovery.hpp  zlib_stream.hpp
include/system/: application.hpp  daemon.hpp  env.hpp
include/thread/: lock.hpp  rwlock.hpp  scheduler.cpp  semaphore.hpp  thread.hpp
include/util/: crypto_util.cpp  crypto_util.hpp  hash_util.hpp  json_util.hpp  password.hpp  string_util.hpp  string_utils.hpp  time_util.hpp  ttime_utils.hpp  util.hpp
migrations/: 001_init_db.sql  010_users_auth.sql  020_contacts.sql  030_groups.sql  040_conversations_messages.sql  050_emoticons.sql  060_articles.sql  070_organize.sql
scripts/docker/: nginx-dev.sh  nginx.dev.conf
scripts/sql/: README.md  migrate.sh
scripts/tooling/: smoke_http.sh
src/: util.cpp
src/api/: article_api_module.cpp  auth_api_module.cpp  common_api_module.cpp  contact_api_module.cpp  emoticon_api_module.cpp  group_api_module.cpp  im_api_module.cpp  message_api_module.cpp  minimal_api_module.cpp  organize_api_module.cpp  talk_api_module.cpp  user_api_module.cpp  ws_gateway_module.cpp
src/app/: README.md  auth_service.cpp  common_service.cpp
src/base/: timer.cpp  util.cpp
src/bootstrap/: README.md  cim_server.cpp
src/common/: common.cpp  config_loader.cpp
src/config/: config.cpp  config_var_base.cpp  config_variable_base.cpp
src/core/: memory_pool.cpp  timer.cpp  util.cpp
src/coroutine/: coroutine.cpp  iomanager.cpp  scheduler.cpp
src/dao/: README.md  user_dao.cpp
src/db/: fox_thread.cpp  mysql.cpp  redis.cpp  sqlite3.cpp
src/ds/: bitmap.cpp  ds_util.cpp  roaring.c  roaring_bitmap.cpp
src/dto/: README.md
src/email/: email.cpp
src/hook/: fdmanager.cpp  hook.cpp
src/http/: http.cpp  http11_parser.rl  http11_parser.rl.cpp  http_connection.cpp  http_parser.cpp  http_server.cpp  http_servlet.cpp  http_session.cpp  httpclient_parser.rl  httpclient_parser.rl.cpp  servlet.cpp  session_data.cpp  uri.rl  ws_connection.cpp  ws_server.cpp  ws_servlet.cpp  ws_session.cpp
src/infra/: README.md
src/io/: coroutine.cpp  iomanager.cpp  lock.cpp  scheduler.cpp  semaphore.cpp  thread.cpp  timer.cpp  worker.cpp
src/log/: log_appender.cpp  log_config.cpp  log_event.cpp  log_file.cpp  log_file_manager.cpp  log_formatter.cpp  log_level.cpp  logger.cpp  logger_manager.cpp
src/net/: address.cpp  buffer.cpp  (+7 more)
tests/: test_address.cpp  test_application.cpp  test_bytearray.cpp  test_config.cpp  test_config_thread_sefa.cpp  test_coroutine.cpp  test_daemon.cpp  test_env.cpp  test_hook.cpp  test_hook2.cpp  test_http.cpp  test_http_connection.cpp  test_http_parser.cpp  test_http_server.cpp  test_iomanager.cpp  test_log.cpp  test_log_basic.cpp  test_log_performance.cpp  test_log_rotate.cpp  test_log_thread_safe.cpp  test_scheduler.cpp  test_socket.cpp  test_tcp_server.cpp  test_thread.cpp  test_thread1.cpp  test_uri.cpp  test_util.cpp
(+68 files in other folders)
